chore(header): fixes some spacing issues for responsive layout & privacy page

--- a/components/Hero/Hero.scss
+++ b/components/Hero/Hero.scss
@@ -6,7 +6,11 @@
   position: relative;
 
   @media screen and (max-width: $break-medium) {
-    padding-top: 48px;
+    padding-top: 192px;
+  }
+
+  @media screen and (max-width: $break-small) {
+    padding-top: 144px;
   }
 
   .large {
